tests/fixtures/invalid/int_div_dict.py
# Cannot divide Int and Dict[str, int]
x: float = 1 / {"a": 1}
